@@ -1,0 +1,10 @@
+# http://module-build.sourceforge.net/META-spec.html
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         Math-Evol
+version:      1.08
+version_from: Evol.pm
+installdirs:  site
+requires:
+
+distribution_type: module
+generated_by: /usr/bin/vim
