@@ -8,11 +8,11 @@
 #########################################################################
 
 use Math::Evol;
-use Test::Simple tests => 2;
+use Test::Simple tests => 6;
 my $detailed = 0;
 
 sub minimise {
-	my $sum = 0.0;
+	my $sum = 1.0;
 	foreach (@_) { $sum += ($_ * $_); }
 	return $sum;
 }
@@ -45,7 +45,7 @@ EOT
 my @x  = (3.456, 1.234, -2.345, 4.567);
 my @sm = (.8, .4, .6, 1.2);
 
-# ----------------- first test &evol --------------------
+# ----------------- test &evol --------------------
 my @returns = &evol(\@x, \@sm, \&minimise, \&contain, 10);
 my $fail1 = 0;
 foreach (@{$returns[0]}) {
@@ -68,7 +68,79 @@ if ($detailed) {
 	}
 }
 
-# ----------------- second test &select_evol --------------------
+undef $Math::Evol::ec;
+@returns = &evol(\@x, \@sm, \&minimise, \&contain, 10);
+$fail1 = 0;
+foreach (@{$returns[0]}) {
+	if (abs $_>0.0001) { if ($detailed) { warn "\$_ = $_\n"; } $fail1++; }
+}
+ok (!$fail1, "evol without absolute convergence criterion");
+if ($detailed) {
+	if ($fail1) { warn "subroutine &evol failed to find the minimum\n"; }
+	foreach (@{$returns[1]}) {
+		if (abs $_ > 0.0001) { warn "step size still $_\n"; $fail1++; }
+	}
+	if ($fail1) {
+		warn "evol returns:\n x = ", join(", ", @{$returns[0]}), "\n";
+		warn "sm = ", join(", ", @{$returns[1]}), "\n";
+		warn "objective = $returns[2]\n";
+		warn "success   = $returns[3]\n";
+	}
+	if (! $returns[3]) {
+		warn "evol ran out of time; maybe you have a slow cpu ?\n";
+	}
+}
+
+$Math::Evol::ec = 1e-16;
+undef $Math::Evol::ed;
+@returns = &evol(\@x, \@sm, \&minimise, \&contain, 10);
+$fail1 = 0;
+foreach (@{$returns[0]}) {
+	if (abs $_>0.0001) { if ($detailed) { warn "\$_ = $_\n"; } $fail1++; }
+}
+ok (!$fail1, "evol without relative convergence criterion");
+if ($detailed) {
+	if ($fail1) { warn "subroutine &evol failed to find the minimum\n"; }
+	foreach (@{$returns[1]}) {
+		if (abs $_ > 0.0001) { warn "step size still $_\n"; $fail1++; }
+	}
+	if ($fail1) {
+		warn "evol returns:\n x = ", join(", ", @{$returns[0]}), "\n";
+		warn "sm = ", join(", ", @{$returns[1]}), "\n";
+		warn "objective = $returns[2]\n";
+		warn "success   = $returns[3]\n";
+	}
+	if (! $returns[3]) {
+		warn "evol ran out of time; maybe you have a slow cpu ?\n";
+	}
+}
+
+undef $Math::Evol::ec;
+undef $Math::Evol::ed;
+@returns = &evol(\@x, \@sm, \&minimise, \&contain, 2);
+$fail1 = 0;
+foreach (@{$returns[0]}) {
+	if (abs $_>0.0001) { if ($detailed) { warn "\$_ = $_\n"; } $fail1++; }
+}
+ok (!$fail1, "evol with \$tm timelimit paramater");
+ok (!$returns[3], "evol correctly reports timelimit exceeded");
+if ($detailed) {
+	if ($fail1) { warn "subroutine &evol failed to find the minimum\n"; }
+	foreach (@{$returns[1]}) {
+		if (abs $_ > 0.0001) { warn "step size still $_\n"; $fail1++; }
+	}
+	if ($fail1) {
+		warn "evol returns:\n x = ", join(", ", @{$returns[0]}), "\n";
+		warn "sm = ", join(", ", @{$returns[1]}), "\n";
+		warn "objective = $returns[2]\n";
+		warn "success   = $returns[3]\n";
+	}
+	if (! $returns[3]) {
+		warn "evol ran out of time, as it's supposed to\n";
+	}
+}
+
+# ----------------- test &select_evol --------------------
 @returns = &select_evol( \@x, \@sm, \&choosebetter, 0, 1);
 my $fail2 = 0;
 foreach (@{$returns[0]}) {
