@@ -11,3 +11,4 @@
 20050122 1.05 test.pl uses Test::Simple
 20051104 1.06 reject 1st rand call, minor pod improvements
 20090617 1.07 convergence criteria documented, and can be undefined
+20090619 1.08 one bugfix and four extra tests
